--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,55 +5,84 @@
     android:layout_height="match_parent"
     tools:context="raulsvilar.desafiomundipagg.view.fragments.SignUpFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <EditText
-        android:layout_width="352dp"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        android:id="@+id/textInputLayout4"
-        android:inputType="textEmailAddress"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
+        android:id="@+id/textInputLayout4"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp" />
+
+    </android.support.design.widget.TextInputLayout>
 
 
-    <EditText
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
         android:id="@+id/textInputLayout2"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:inputType="textPassword" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
 
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Nome"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/textInputLayout3"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="textPersonName" />
+        android:layout_marginTop="8dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Nome"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:inputType="textPersonName" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:text="Button"
