initial sing up flow

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:name="raulsvilar.desafiomundipagg.view.fragments.SignUpFragment"
+    tools:layout="@layout/fragment_sign_up">
+</fragment>
+
+
+
+<!-- <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -43,4 +55,4 @@
             android:layout_height="wrap_content"
             android:hint="hint" />
     </android.support.design.widget.TextInputLayout>
-</android.support.constraint.ConstraintLayout>
+</android.support.constraint.ConstraintLayout> -->
