--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -19,15 +19,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/button"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:onClick="@{() -> userVM.registerUser()}"
-            android:layout_marginRight="16dp" />
+            android:layout_marginRight="16dp"
+            app:layout_constraintHorizontal_bias="0.46"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
@@ -48,7 +49,7 @@
                 android:hint="@string/name"
                 android:inputType="textPersonName"
                 android:maxLines="1"
-                android:text="@{userVM.userName}"/>
+                android:text="@={userVM.userName}"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -67,32 +68,53 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:hint="@string/email"
-                android:text="@{userVM.userEmail}"
-                android:inputType="textEmailAddress"
-                android:textAlignment="center" />
+                android:text="@={userVM.userEmail}"
+                android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:id="@+id/textInputLayout5">
+            android:id="@+id/textInputLayout5"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            android:layout_marginTop="8dp">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
-                android:text="@{userVM.userPassword}"
-                android:inputType="textPassword"
-                android:textAlignment="center" />
+                android:maxLines="1"
+                android:text="@={userVM.userPassword}"
+                android:inputType="textPassword"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/textInputLayout"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="@={userVM.userCompany}"
+                android:hint="@string/company" />
         </android.support.design.widget.TextInputLayout>
 
 
