--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="userVM"
             type="raulsvilar.desafiomundipagg.viewmodel.UserViewModel"/>
@@ -15,6 +16,7 @@
         tools:context="raulsvilar.desafiomundipagg.view.fragments.SignUpFragment">
 
         <Button
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:text="@string/sign_up"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -32,6 +34,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_height="wrap_content"
             android:id="@+id/textInputLayout3"
             android:layout_marginTop="16dp"
@@ -47,13 +50,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
-                android:inputType="textPersonName"
+                android:inputType="textCapWords|textPersonName"
                 android:maxLines="1"
-                android:text="@={userVM.userName}"/>
+                android:text="@={userVM.userName}" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
@@ -76,6 +80,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -93,11 +98,12 @@
                 android:hint="@string/password"
                 android:maxLines="1"
                 android:text="@={userVM.userPassword}"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -114,9 +120,20 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@={userVM.userCompany}"
-                android:hint="@string/company" />
+                android:hint="@string/company"
+                android:inputType="textCapWords" />
         </android.support.design.widget.TextInputLayout>
 
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar2"
+            android:visibility="@{userVM.loading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
