--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -19,6 +19,7 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/textInputLayout2"
@@ -42,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -63,6 +65,7 @@
         <Button
             android:text="@string/sign_in"
             android:layout_width="0dp"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:layout_height="wrap_content"
             android:id="@+id/button2"
             android:onClick="@{() -> userVM.authenticateUser()}"
@@ -79,6 +82,7 @@
             android:text="@string/sign_up"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
             android:id="@+id/button3"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button2"
@@ -88,6 +92,18 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar2"
+            android:visibility="@{userVM.loading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
 
