--- a/app/src/main/res/layout/fragment_list_merchants.xml
+++ b/app/src/main/res/layout/fragment_list_merchants.xml
@@ -5,7 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="raulsvilar.desafiomundipagg.view.fragments.ListMerchantsFragment">
+        tools:context="raulsvilar.desafiomundipagg.views.fragments.ListMerchantsFragment">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
