--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -6,13 +6,13 @@
         <import type="android.view.View"/>
         <variable
             name="userVM"
-            type="raulsvilar.desafiomundipagg.viewmodel.UserViewModel"/>
+            type="raulsvilar.desafiomundipagg.viewmodels.UserViewModel"/>
         </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="raulsvilar.desafiomundipagg.view.fragments.SignInFragment">
+        tools:context="raulsvilar.desafiomundipagg.views.fragments.SignInFragment">
 
 
 
