--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,13 +7,13 @@
         <import type="android.view.View"/>
         <variable
             name="userVM"
-            type="raulsvilar.desafiomundipagg.viewmodel.UserViewModel"/>
+            type="raulsvilar.desafiomundipagg.viewmodels.UserViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="raulsvilar.desafiomundipagg.view.fragments.SignUpFragment">
+        tools:context="raulsvilar.desafiomundipagg.views.fragments.SignUpFragment">
 
         <Button
             android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
