--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -3,14 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="transactionVM"
+            type="raulsvilar.desafiomundipagg.viewmodels.TransactionViewModel"/>
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="raulsvilar.desafiomundipagg.views.fragments.TransactionFragment">
 
         <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
+            android:text="@string/buy"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/button4"
             android:layout_marginStart="16dp"
@@ -19,7 +25,64 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinner"
+            android:layout_marginTop="16dp" />
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/textInputLayout7"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/value"
+                android:text="@={transactionVM.value}"
+                android:inputType="numberDecimal"
+                android:maxLines="1" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textInputLayout8"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={transactionVM.installments}"
+                android:hint="@string/Installment"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Spinner
+            android:layout_width="368dp"
+            android:layout_height="48dp"
+            android:id="@+id/spinner"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:entries="@array/Brands"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp" />
     </android.support.constraint.ConstraintLayout>
 </layout>
