--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="transactionVM"
             type="raulsvilar.desafiomundipagg.viewmodels.TransactionViewModel"/>
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/button4"
             android:layout_marginStart="16dp"
+            android:visibility="@{!transactionVM.loadingTransaction ? View.VISIBLE : View.GONE}"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
@@ -34,6 +36,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/textInputLayout7"
+            android:visibility="@{!transactionVM.loadingTransaction ? View.VISIBLE : View.GONE}"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
@@ -55,6 +58,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textInputLayout8"
             android:layout_marginTop="8dp"
+            android:visibility="@{!transactionVM.loadingTransaction ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -75,6 +79,7 @@
             android:layout_width="368dp"
             android:layout_height="48dp"
             android:id="@+id/spinner"
+            android:visibility="@{!transactionVM.loadingTransaction ? View.VISIBLE : View.GONE}"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
             android:layout_marginStart="16dp"
@@ -84,5 +89,16 @@
             android:entries="@array/Brands"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar4"
+            android:visibility="@{transactionVM.loadingTransaction ? View.VISIBLE : View.GONE}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </layout>
